# gvr-hybrid-node

./: .gitignore  Cargo.toml  Dockerfile  ECONOMY.md  PROTO.md  README.en.md  README.md  TESTNET_CONNECT.md  WINDOWS_GUIDE.md  chain.json  check_block.py  fix_and_sign_phase3.py  generate_fixed_phase1.py  generate_state.py  requirements.txt  rotate_ai.json  run-node.bat  run_gvr.ps1  send-tx.bat  setup_dist.ps1  show_file_preview.py  state.fixed.json  state.json  state.json.backup  state.json.bak  state_test_phase1.json  state_test_phase2.json  state_test_phase3.fixed.json  state_test_phase3.json  state_test_phase3.json.bak  validate_state.py
src/: accounts.rs  block.rs  blockchain.rs  constants.rs  crypto.rs  economy.rs  emission.rs  energy.rs  hashing.rs  lib.rs  main.rs  mempool.rs  mine.rs  p2p.rs  reward.rs  rpc.rs  state.rs  transaction.rs
static/: index.html
tests/: blockchain_tests.rs  emission_tests.rs  energy_tests.rs
wallets/: alekseymonin1992.key  alice.key  bob.key  vasya.key
