[package]
name = "gvr_hybrid_node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
sha2 = "0.10"
k256 = { version = "0.12", features = ["ecdsa"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ctrlc = "3.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }